magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/pulse.scss
@charset "UTF-8";

@mixin pulse {

/* PULSE DASHBOARD STYLES */

.pulse-dashboard .v-splitpanel-hsplitter-locked {
  border:none;
}

.pulse-dashboard .v-feed-section {
    padding-top:12px;
}

.v-dashboard-entry {
  border-bottom: 1px solid $c14;
  margin-bottom: 10px;
  font-size:15px;
}

/* Clearfix */
.v-dashboard-entry:before, .v-dashboard-entry:after { content: ""; display: table; }
.v-dashboard-entry:after { clear: both; }

.v-dashboard-entry {padding-top:10px; padding-bottom:5px;}

.v-dashboard-entry .v-label {
  display:inline-block;
}

.v-dashboard-entry .v-label-icon {
  width:32px;
  height:32px;
  color:#679600;
  font-size:32px;
  position: relative;
    top:-12px;
    float:left;
}

.v-dashboard-entry .content {
  margin-left:-40px;
  float:right;
  width:350px !important
}

.v-dashboard-entry .content {
  padding-left:40px;
}

.v-dashboard-entry .v-label-comment:empty {
  display:none;
}
.v-dashboard-entry .v-label-comment {
  padding:8px;
  background-color:$c15;
  margin-bottom:5px;
}
.v-dashboard-entry .comment-divet {
  color:$c15;
  display:block;
  font-size:20px;
  height:14px;
  line-height:20px;
  padding-left:12px;
}

.v-dashboard-entry .v-label-date {
  color:$c14;
  text-align:right;
  width:340px !important;
}

.v-pulse {
  background-color: $c80;
  font-family:Verdana,sans-serif;
}
.v-pulse .v-widget {
  font-size: 12px;
}

.v-pulse .v-feed-title-link {
    width: 16px;
    height: 16px;
    border: 0;
    background: url("img/icon-rss.png") no-repeat scroll 0 0 transparent;
}

.v-pulse .category-separator {
    padding:10px 0;
}

.v-pulse .category-separator, .v-pulse .recent-pages th {
    color:$c90;
    font-weight:bold;
}

.v-pulse .recent-pages {
  width:100%;
}

.v-pulse .recent-pages tr {
  height:34px;
}

.v-pulse .recent-pages .status-icon {
  font-size:32px;
  line-height:24px;
  position:relative;
  top:-2px;
}

.pulse-dashboard .icon-rssfeed {
  position:absolute;
  top:8px;
  right:20px;
  color:$c14;
  font-size: 20px;
}

.v-pulse .navigator {
  padding:13px 0 20px;
  height:25px;
}
.v-pulse .navigator > * {
  vertical-align:top;
}

.v-pulse .navigator-button {
  height:12px;
  border-right:1px solid $c13;
  padding:0 42px 0 20px;
  color:$c13;
  font-family:DINWebPro, sans-serif;
  font-size:14px;
  line-height:1;
  text-transform:uppercase;

}
.v-pulse .v-nativebutton-active {color:$c10;}
.v-pulse .v-nativebutton::-moz-focus-inner {padding:0; border:0}
.v-pulse .navigator-button .v-nativebutton-caption {text-decoration:none;}

.v-pulse .back-button {
  display: inline-block;
  cursor: pointer;
}

.v-pulse .back-button .v-label {
  padding-left: 5px;
  cursor: inherit;
}

.v-pulse .message-title {
  font-weight: bold;
  margin: 25px 0 30px 150px;
  text-align: left;
  text-overflow: ellipsis;
  width: 430px;
}

.v-pulse .message-detail {
  margin-top: 30px;
  padding-left: 10px;
}

.v-pulse .v-actionbar {
  min-height: 450px;
  font-size: 14px !important;
}

/*temporarily hide fullscreen and minimize options*/
.v-pulse .v-actionbar .v-actionbar-fullscreen, .v-pulse .v-actionbar .v-actionbar-toggle {
  display: none;
}

.v-pulse .field-view {
  margin-bottom: 10px;
}
.v-pulse .field-view .v-label {
  line-height: 20px;
  color: #000;
  padding: 0;
}

.v-pulse .field-view .v-label.textarea {
  height: 200px;
  width: 430px;
  padding: 0 5px 5px 5px;

  overflow: auto;
}

.v-pulse .field-view .v-caption {
  line-height: 30px;
  vertical-align: middle;
}


.v-pulse .v-table-header-wrap {
  background: none !important;
  border-bottom: 1px solid #666 !important;
  font-weight: bold;
}

.v-pulse .v-table-resizer {
  display: none; /* Apparently one cannot disable column resizing via Table API*/
}

.v-pulse .v-table-row *, .v-pulse .v-table-row-odd *{
  cursor: pointer;
}
.v-pulse .v-table-row:hover .v-table-cell-content-sorted, .v-pulse .v-table-row-odd:hover .v-table-cell-content-sorted{
  background-color: #E0E0E0;
}

.v-pulse .v-table-row.v-selected:hover .v-table-cell-content-sorted, .v-pulse .v-table-row-odd.v-selected:hover .v-table-cell-content-sorted {
  background-color: #666666 ;
}

.v-pulse .v-table-cell-wrapper {
  height: 50px !important;
}

.v-pulse .v-table-cell-content-sorted {
  background-color: #EFEFEF;
}

.v-pulse .v-table-generated-row, .v-pulse tr.v-table-generated-row.v-selected .v-table-cell-content,
.v-pulse tr.v-table-generated-row .v-table-cell-content-sorted {
  background: none !important;
}

.v-pulse .v-table-generated-row:hover {
  background: none !important;
}
.v-pulse .v-table-generated-row.v-table-row, .v-pulse .v-table-generated-row.v-table-row-odd  {
  border-bottom: 1px solid #666 !important;
}

.v-pulse .v-table-generated-row .v-table-cell-wrapper {
  padding-left: 0 !important;
  height: 30px !important;
  color: #C3C5C7;
  font-weight: bold;
}

.v-pulse .v-table-generated-row .v-table-cell-wrapper:empty:after {
    display: none;
}

.v-pulse .v-table-generated-row .v-treetable-treespacer {
  width: 0 !important;
}

.v-pulse .v-treetable-treespacer {
  width: 20px !important;
}

.v-pulse .v-table-generated-row .v-table-cell-content {
  border-bottom: 1px solid $c11 !important;
  padding-top: 10px;
}

.v-pulse .navigator-grouping {
  display: inline-block;
  margin-left: 50px;
  margin-top:-5px;
}

.v-pulse .emptyplaceholder {
  color: $c10;
  font-weight: bold;
  text-align: center;
}

.v-pulse .new-message {
  color: #A3A3A3;
  font-size: 16px;
  padding-left: 5px;
}
.v-pulse .message-type {
  color: #A3A3A3;
  font-size: 30px;
}
.v-pulse .message-type.error {
  color: #9A3332;
}
.v-pulse .message-type.warning {
  color: #FFBF28;
}

.message-subject-text div{
  position: absolute;
  top: 22px;
}

.v-pulse .footer {
  border-top: 1px solid #666666;
  margin-top: 10px;
  padding: 10px 10px;
  width: 100%;
}

.v-pulse .footer button.action-popup-trigger {
  background-color: #666666;
  border: medium none;
  color: $c80;
  font-size: 12px;
  margin-left: 5px;
}

.v-pulse .footer .status {
  position:absolute;
  right: 20px;
}

}

